Fixed "page jump" when navigation loads.

--- a/JustPressPlay/JustPressPlay/Content/css/jppstyle.less
+++ b/JustPressPlay/JustPressPlay/Content/css/jppstyle.less
@@ -216,6 +216,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: @heavyText;
     -webkit-font-smoothing: antialiased;
+    padding-top: @navHeight;
 }
 
 h1, h2, h3, h4, h5, h6, p, a {
